--- a/global_kinematic_model/src/CMakeLists.txt
+++ b/global_kinematic_model/src/CMakeLists.txt
@@ -9,12 +9,12 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/main.cpp)
+set(sources ./main.cpp)
 
 include_directories(/usr/local/include)
-include_directories(src/Eigen-3.3)
+include_directories(./Eigen-3.3)
 link_directories(/usr/local/lib)
 
-add_executable(polyfit ${sources})
+add_executable(global_kinematic_model ${sources})
 
-target_link_libraries(polyfit)
+target_link_libraries(global_kinematic_model)
