--- a/polyfit/src/CMakeLists.txt
+++ b/polyfit/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(mpc)
+project(q2)
 
 cmake_minimum_required (VERSION 3.5)
 
@@ -9,16 +9,12 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/MPC.cpp)
+set(sources ./main.cpp)
 
-include_directories(src/Eigen-3.3)
 include_directories(/usr/local/include)
+include_directories(./Eigen-3.3)
 link_directories(/usr/local/lib)
 
-add_executable(mpc ${sources})
+add_executable(polyfit ${sources})
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-target_link_libraries(mpc ipopt python2.7)
-else()
-target_link_libraries(mpc ipopt python)
-endif()
+target_link_libraries(polyfit)
